--- a/styles/sass/tuning-in.scss
+++ b/styles/sass/tuning-in.scss
@@ -4,7 +4,13 @@ $accent-color: #000;
 
 @include accent($accent-color);
 
-#rows {
+#posts {
    margin: 0;
    padding: 0;
+}
+
+.post {
+   margin: 0;
+   width: 100%;
+   list-style-type: none;
 }
