--- a/styles/comments.css
+++ b/styles/comments.css
@@ -1,7 +1,19 @@
 a {
-  color: #000; }
+  color: #c070e0; }
   a:hover:not(.tab) {
-    color: #080808; }
+    color: #a050c0; }
+
+nav {
+  background-color: #c070e0; }
+
+#nav-base {
+  background-color: #c070e0; }
+
+.tab {
+  color: #c070e0;
+  border-color: #a050c0; }
+  .tab:not(.selected) {
+    background-color: #fff; }
 
 #posts {
   margin: 0;
