Change various base styles
I learned that margins collapse! Incredibly useful property.

--- a/styles/base.css
+++ b/styles/base.css
@@ -13,6 +13,8 @@ body {
 a {
   text-decoration: none; }
 
+h1 {
+  font-family: 'Silkscreen', monospace; }
 
 nav {
   font-family: 'Silkscreen', monospace;
@@ -28,7 +30,7 @@ nav {
   position: relative;
   float: left;
   color: #88888f;
-  background-color: #bbbbbf; }
+  background-color: #cccccf; }
   .tab.selected {
     background-color: #fff;
     cursor: default; }
@@ -37,23 +39,18 @@ nav {
 
 main {
   margin: auto;
-  max-width: 650px;
-  font-family: 'Chivo', serif;
+  font-family: 'Chivo', sans-serif;
   font-weight: 400;
   color: #88888f; }
 
-#tab-title {
-  margin: 0;
-  font-family: 'silkscreen', monospace;
+h1 {
   font-weight: 400;
-  text-align: center;
   color: #88888f; }
-  #tab-title span {
+  h1 span {
     color: #cccccf; }
 
-p {
-  margin-bottom: 0; }
-
+#tab-title {
+  text-align: center; }
 
 nav {
   height: 2.7em;
