--- a/assets/styles/sass/_fonts.scss
+++ b/assets/styles/sass/_fonts.scss
@@ -7,19 +7,19 @@
 $font-name: 'Clear Sans';
 
 @font-face {
-   src: url('http://timglorioso.com/assets/fonts/clearsans-light.woff')
+   src: url('../fonts/clearsans-light.woff')
         format('woff');
    @include set-font($font-name, normal, 300);
 }
 
 @font-face {
-   src: url('http://timglorioso.com/assets/fonts/clearsans-regular.woff')
+   src: url('../fonts/clearsans-regular.woff')
         format('woff');
    @include set-font($font-name, normal, 400);
 }
 
 @font-face {
-   src: url('http://timglorioso.com/assets/fonts/clearsans-italic.woff')
+   src: url('../fonts/clearsans-italic.woff')
         format('woff');
    @include set-font($font-name, italic, 400);
 }
