--- a/assets/styles/sass/_fonts.sass
+++ b/assets/styles/sass/_fonts.sass
@@ -6,13 +6,13 @@
 @import global-vars
 
 @font-face
-   src: url('../fonts/clearsans-light.woff') format('woff')
+   src: url('http://assets.timglorioso.com/fonts/clearsans-light.woff') format('woff')
    +set-font($font-name, normal, 300)
 
 @font-face
-   src: url('../fonts/clearsans-regular.woff') format('woff')
+   src: url('http://assets.timglorioso.com/fonts/clearsans-regular.woff') format('woff')
    +set-font($font-name, normal, 400)
 
 @font-face
-   src: url('../fonts/clearsans-italic.woff') format('woff')
+   src: url('http://assets.timglorioso.com/fonts/clearsans-italic.woff') format('woff')
    +set-font($font-name, italic, 400)
