--- a/assets/styles/sass/base.sass
+++ b/assets/styles/sass/base.sass
@@ -9,9 +9,12 @@
 
 $font-stack: $font-name, sans-serif
 
-a
+body
    +set-font($font-stack, normal, 400)
-   +set-colors($text: #fff, $border: #888)
+
+a
+   border-style: solid
+   text-decoration: none
 
 header
    text-align: center
@@ -26,27 +29,34 @@ header
       font-size: 1.25em
       text-transform: lowercase
 
-      +set-colors($background: $base-color + #111, $border: $base-color + #111)
+      +set-colors($background: $base-color + #111, $text: white, $border: $base-color + #111)
       +on-hover-focus(background-color, $base-color + #222)
 
       &.current
          +set-colors($background: white, $text: $base-color, $border: $accent-color)
 
       &:not(.current)
+         border-width: 0
+
          +light-text-on-dark
 
 main
    line-height: 1.8
 
-   +set-font($font-stack, normal, 400)
-   +set-colors($text: #222)
+   +set-colors($text: $base-color)
+
+   a
+      border-width: 0 0 2px 0
+
+      +set-colors($text: $base-color + #222, $border: $base-color + #666)
+      +on-hover-focus(border-color, $accent-color)
 
    & > :first-child
       margin-top: 0
 
    h1, h2
       +set-font($font-stack, normal, 300)
-      +set-colors($text: #888)
+      +set-colors($text: $base-color + #444)
 
    h2
       margin-top: 4em
@@ -65,4 +75,4 @@ main
       border: 0
       width: 1em
       height: 1em
-      background-color: #ccc
+      background-color: $base-color + #999
