Make little fixes
Links, logo alt text, sass file comments

--- a/assets/styles/sass/viewports.sass
+++ b/assets/styles/sass/viewports.sass
@@ -1,4 +1,4 @@
-// viewports.scss
+// viewports.sass
 //
 // Defines font sizes and other viewport-dependent styles. Target devices are
 // listed above each media query.
