Design new Tumblr layout

--- a/assets/styles/sass/_util.sass
+++ b/assets/styles/sass/_util.sass
@@ -1,10 +1,11 @@
 @import global-vars
 
-=set-font($stack, $style, $weight)
+=set-font($stack: null, $style: null, $weight: null, $size: null)
 
    font-family: $stack
    font-style: $style
    font-weight: $weight
+   font-size: $size
 
 
 =set-colors($text: null, $background: null, $border: null)
@@ -12,6 +13,15 @@
    color: $text
    background-color: $background
    border-color: $border
+
+
+=set-box-model($margin: null, $border: null, $padding: null, $width: null, $height: null)
+
+   margin: $margin
+   border-width: $border
+   padding: $padding
+   width: $width
+   height: $height
 
 
 =on-hover-focus($property, $value, $duration: null)
@@ -56,6 +66,13 @@
          &.current
             border-width: 0 0 0 $tab-border-width
 
+   main
+      margin-left: $header-width
+      padding: 5em $header-width / 3
+
+      .more,
+      #pagination a
+         +set-box-model($margin: 0 2em 0 0)
 
 
 =header-on-top($logo-width)
@@ -73,3 +90,13 @@
 
          &.current
             border-width: $tab-border-width 0 0 0
+
+   main
+      padding: 2em 5%
+
+      #pagination
+         position: relative
+
+         #hold-right
+            position: absolute
+            right: 0
